--- a/app/src/main/res/layout/floating_button.xml
+++ b/app/src/main/res/layout/floating_button.xml
@@ -3,12 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@android:color/background_dark">
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/image_action"
-        tools:ignore="ContentDescription" />
+    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/container"
+        tools:ignore="UselessParent">
+        <View
+            android:id="@+id/collapse_view"
+            android:layout_width="50dp"
+            android:visibility="visible"
+            android:layout_height="50dp"
+            android:orientation="vertical"
+            android:background="@drawable/button"/>
+    </RelativeLayout>
+
 </FrameLayout>
